# swagger.yml
@@ -495,41 +495,6 @@ paths:
           description: Internal server error
           schema:
             $ref: '#/definitions/500CodeResponsePayload'
-    patch:
-      tags:
-        - transactions
-      summary: Update parcially an existing transaction
-      operationId: patchTransaction
-      parameters:
-        - name: accountId
-          in: path
-          description: ID of account to which the transaction belongs
-          required: true
-          type: integer
-          format: int64
-        - name: transactionId
-          in: path
-          description: ID of transaction to return
-          required: true
-          type: integer
-          format: int64
-        - in: body
-          name: body
-          description: Transaction object that needs to be uptaded
-          required: true
-          schema:
-            $ref: '#/definitions/Transaction'
-      responses:
-        '200':
-          description: Ok
-          schema:
-            $ref: '#/definitions/Transaction'
-        '400':
-          description: Invalid ID supplied
-        '404':
-          description: Transaction not found
-        '405':
-          description: Validation exception
     delete:
       tags:
         - transactions
